--- a/index.css
+++ b/index.css
@@ -165,10 +165,41 @@
   }
   .video-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     gap: 1rem;
-    grid-auto-rows: 640px
+    grid-auto-rows: 240px;
   }
+
+  @media (max-width: 768px) {
+    .video-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+        gap: 1rem;
+        grid-auto-rows: 120px;
+      }
+
+    .video-meta{
+        display: none;
+    }
+
+    button.mobile-audio-toggle{
+        display: none;
+    }
+
+    .video-modal-close{
+        display: block;
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        opacity: 1;
+        width: 32px;
+        height: 32px;
+        padding: 0;
+        font-size: 12pt;
+        z-index: 1001;
+    }
+  }
+
   .video-card {
     position: relative;
     background: #101318;
@@ -177,6 +208,8 @@
     box-shadow: 0 10px 30px rgba(0,0,0,0.35);
     transition: transform .2s ease, box-shadow .2s ease;
   }
+
+  
   .video-card:hover {
     transform: translateY(-4px);
     box-shadow: 0 16px 40px rgba(0,0,0,0.45);
@@ -225,6 +258,53 @@
   }
   .video-card.is-loading .loading-spinner { opacity: 1; }
 
+  .video-modal{
+    
+  display: none;
+  
+  }
+
+  .video-modal.active{
+    z-index: 1000;
+  display: flex;
+  justify-content: center;
+    position: absolute;
+    top: 0;
+    width: 100%;
+  
+  }
+  @media (min-width:768px) {
+    .video-modal-close{
+        display: none;
+      }
+  }
+  
+
+  .video-modal-content{
+    display: flex;
+    justify-content: center;
+    
+    
+  }
+
+  .video-modal-backdrop{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vw;
+    background-color: rgba(0,0,0,0.7);
+    z-index: 990;
+
+
+  }
+  .video-modal-content{
+    z-index: 991;
+  position: relative;
+  }
+
   @keyframes spin {
     to { transform: rotate(360deg); }
   }
@@ -233,7 +313,7 @@
     width: 100%;
     height: 100%;
     aspect-ratio: 16/9;
-    object-fit: cover;
+    object-fit: contain;
     display: block;
   }
   .video-meta {
@@ -256,6 +336,16 @@
     font-size: .85rem;
     color: #b0b0b0;
   }
+
+  .video-modal-meta{
+    display: none;
+  }
+
+  .video-modal-body{
+    display: flex;
+    justify-content: center;
+  }
+
 .mobile-audio-toggle {
   position: absolute;
   top: 0.75rem;
@@ -1893,7 +1983,7 @@
   .old-price {
       text-decoration: line-through;
       color: #666;
-      font-size: 1.4rem;
+      font-size: 1rem;
       margin-bottom: 1rem;
       font-family: 'EstedadBold';
       opacity: 0;
@@ -1916,14 +2006,14 @@
 
   @media (max-width: 768px) {
       .current-price {
-          font-size: 4rem;
+          font-size: 2rem;
           margin-bottom: 1rem;
       }
   }
 
   @media (max-width: 480px) {
       .current-price {
-          font-size: 3rem;
+          font-size: 2rem;
           margin-bottom: 0.8rem;
       }
   }
@@ -1931,7 +2021,7 @@
   .price-subtitle {
       color: #b0b0b0;
       /* margin-bottom: 3rem; */
-      font-size: 1.2rem;
+      font-size: 1rem;
       font-family: 'TitrBold';
       opacity: 0;
       transform: translateY(20px);
@@ -1939,16 +2029,16 @@
   
   .features-list {
       list-style: none;
-      margin: 3rem 0;
+      margin: 1rem 0;
       text-align: right;
   }
   
   .features-list li {
-      padding: 1rem 0;
+      padding: 0.25rem 0;
       color: #b0b0b0;
       position: relative;
       padding-right: 2.5rem;
-      font-size: 1.1rem;
+      font-size: 0.75rem;
       font-family: 'EstedadBold';
       opacity: 0;
       transform: translateX(30px);
@@ -1960,7 +2050,7 @@
       right: 0;
       color: #00ff87;
       font-weight: bold;
-      font-size: 1.2rem;
+      font-size: 0.75rem;
   }
 
   /* Testimonials */
